--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-rate-limit": "^7.1.5",
     "fastq": "^1.17.1",
     "firebase-admin": "^12.0.0",
+    "node-cache": "^5.1.2",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4"
   }
